--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ const semuaBab = {
     ["しゃしん","写真","shashin","foto","benda","写（sha, salin）＋真（shin, nyata）"],
     ["みせ","店","mise","toko","tempat","店（mise, toko）"],
     ["レストラン","","resutoran","restoran","tempat",""],
-    ["にわ","庭","niwa","taman","tempat","庭（niwa, taman）"],
+    ["にわ","庭","niwa","halaman pribadi","tempat","庭（niwa, taman）"],
     ["しゅくだい","宿題","shukudai","pekerjaan rumah","benda","宿（shuku, tempat tinggal）＋題（dai, tugas）"],
     ["テニス","","tenisu","tenis","aktivitas",""],
     ["サッカー","","sakkā","sepak bola","aktivitas",""],
@@ -1474,3 +1474,4 @@ window.addEventListener('DOMContentLoaded',()=>{currentLesson=Number(els.lesson.
 </body>
 
 </html>
+
