--- a/index.html
+++ b/index.html
@@ -484,16 +484,16 @@ const semuaBab = {
     ["もらいます","","moraimasu","menerima","verba","貰（morai, terima）＋ます"],
     ["かします","貸します","kashimasu","meminjamkan","verba","貸（kashi, pinjamkan）＋ます"],
     ["かります","借ります","karimasu","meminjam","verba","借（kari, pinjam）＋ます"],
-    ["おしえます（じゅうしょを〜）","教えます（住所を〜）","oshiemasu (jūsho o〜)","mengajar / memberi tahu (alamat)","verba","教（oshie, ajar）＋ます"],
+    ["おしえます","教えます","oshiemasu","mengajar / memberi tahu (alamat)","verba","教（oshie, ajar）＋ます"],
     ["ならいます","習います","naraimasu","belajar (dari orang)","verba","習（narai, belajar）＋ます"],
-    ["かけます（でんわを〜）","","kakemasu (denwa o〜)","menelepon","verba","掛（kake, menggantung / menelpon）＋ます"],
+    ["かけます","","kakemasu","menelepon","verba","掛（kake, menggantung / menelpon）＋ます"],
     ["て","手","te","tangan","benda","手（te, tangan）"],
     ["はし","","hashi","sumpit","benda",""],
     ["スプーン","","supūn","sendok","benda",""],
     ["ナイフ","","naifu","pisau","benda",""],
     ["フォーク","","fōku","garpu","benda",""],
     ["はさみ","","hasami","gunting","benda","鋏（hasami, gunting）"],
-    ["ファクス","","fakusu","faksimile","benda",""],
+    ["ファクス","","fakusu","fax","benda",""],
     ["パソコン","","pasokon","komputer pribadi","benda",""],
     ["ケータイ（けいたいでんわ）","","kētai (keitai denwa)","ponsel","benda","携帯電話（keitai denwa, ponsel）"],
     ["メール","","mēru","email","benda",""],
@@ -1474,4 +1474,5 @@ window.addEventListener('DOMContentLoaded',()=>{currentLesson=Number(els.lesson.
 </body>
 
 </html>
+
 
