--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@ const semuaBab = {
     ["どうぞ","","dōzo","silakan","ekspresi",""],
     ["どうも","","dōmo","terima kasih","ekspresi",""],
     ["ありがとう ございます","","arigatō gozaimasu","terima kasih banyak","ekspresi","有（ari, ada）＋難（gata, sulit）"],
-    ["これから おせわに なります","","kore kara osewa ni narimasu","mohon bantuannya","ekspresi","世話（sewa, bantuan）＋になります（menjadi tanggungan）"],
-    ["こちらこそ よろしく","","kochira koso yoroshiku","sama-sama","ekspresi","此方（kochira, pihak ini）＋こそ（penegasan）＋宜（yoro, baik）"]
+    ["これから おせわに なります","","kore kara osewa ni narimasu","Mulai sekarang, mohon bantuan","ekspresi","世話（sewa, bantuan）＋になります（menjadi tanggungan）"],
+    ["こちらこそ よろしく","","kochira koso yoroshiku","mohon bimbingannya","ekspresi","此方（kochira, pihak ini）＋こそ（penegasan）＋宜（yoro, baik）"]
   ],
   3: [
     ["ここ","","koko","sini","kata tunjuk",""],
@@ -1474,5 +1474,6 @@ window.addEventListener('DOMContentLoaded',()=>{currentLesson=Number(els.lesson.
 </body>
 
 </html>
+
 
 
