--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ const semuaBab = {
     ["まん","万","man","sepuluh ribu","angka","万（man, sepuluh ribu）"],
     ["すみません","","sumimasen","maaf / permisi","ekspresi",""],
     ["〜でございます","","〜de gozaimasu","bentuk sopan dari です","ekspresi",""],
-    ["みせて ください","","misete kudasai","tolong perlihatkan","ekspresi","見（mi, melihat）＋せて（bentuk minta）＋下さい（tolong）"],
+    ["みせて ください","見せて 下さい","misete kudasai","tolong perlihatkan","ekspresi","見（mi, melihat）＋せて（bentuk minta）＋下さい（tolong）"],
     ["じゃ（〜を）ください","","ja (〜o) kudasai","tolong beri saya (〜)","ekspresi",""],
     ["イタリア","","Itaria","Italia","negara",""],
     ["スイス","","Suisu","Swiss","negara",""],
@@ -1474,6 +1474,7 @@ window.addEventListener('DOMContentLoaded',()=>{currentLesson=Number(els.lesson.
 </body>
 
 </html>
+
 
 
 
