--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@ const semuaBab = {
     ["はん","半","han","setengah","waktu","半（han, setengah）"],
     ["なんじ","何時","nanji","jam berapa","waktu","何（nan, apa）＋時（ji, waktu）"],
     ["なんぷん","何分","nanpun","berapa menit","waktu","何（nan, apa）＋分（pun, menit）"],
-    ["ごぜん","午前","gozen","a.m. (pagi)","waktu","午（go, tengah hari）＋前（zen, sebelum）"],
-    ["ごご","午後","gogo","p.m. (sore)","waktu","午（go, tengah hari）＋後（go, sesudah）"],
+    ["ごぜん","午前","gozen","am (pagi)","waktu","午（go, tengah hari）＋前（zen, sebelum）"],
+    ["ごご","午後","gogo","pm (sore)","waktu","午（go, tengah hari）＋後（go, sesudah）"],
     ["あさ","朝","asa","pagi","waktu","朝（asa, pagi）"],
     ["ひる","昼","hiru","siang","waktu","昼（hiru, siang）"],
     ["ばん（よる）","晩（夜）","ban (yoru)","malam","waktu","晩／夜（ban/yoru, malam）"],
@@ -1474,6 +1474,7 @@ window.addEventListener('DOMContentLoaded',()=>{currentLesson=Number(els.lesson.
 </body>
 
 </html>
+
 
 
 
